<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttonPanel"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/photosBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/collectionsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collections_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/userBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_btn" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>